@@ -4,12 +4,14 @@ import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import market.demo.domain.etc.Delivery;
 import market.demo.domain.item.Item;
 import market.demo.domain.member.Address;
 import market.demo.domain.member.Member;
 import market.demo.domain.status.DeliveryStatus;
 import market.demo.domain.status.OrderStatus;
+import market.demo.service.CartService;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
@@ -21,7 +23,7 @@ import java.util.stream.IntStream;
 @Component
 @RequiredArgsConstructor
 public class OrderTestDataCreator {
-/*
+
     private final InitService initService;
 
     public void init() {
@@ -29,9 +31,13 @@ public class OrderTestDataCreator {
     }
 
     @Component
+    @RequiredArgsConstructor
+    @Slf4j
     static class InitService {
         @PersistenceContext
         private EntityManager em;
+
+        private final CartService cartService;
 
         @Transactional
         public void createTestData(int numberOfOrders) {
@@ -55,9 +61,20 @@ public class OrderTestDataCreator {
                     int orderCount = ThreadLocalRandom.current().nextInt(1, 5);
                     int orderPrice = item.getItemPrice() * orderCount;
                     return new OrderItem(item, orderCount, orderPrice);
-                }).collect(Collectors.toList());
+                }).toList();
 
-                orderItems.forEach(order::addOrderItem); // 주문 항목을 주문에 추가
+                orderItems.forEach(orderItem -> {
+                    order.addOrderItem(orderItem);
+
+                    if (!isItemInCart(member.getCart(), orderItem.getItem())) {
+                        try {
+                            cartService.insertCart(member.getLoginId(), orderItem.getItem().getId());
+                        } catch (IllegalArgumentException e) {
+                            log.info("이미 장바구니에 있는 아이템: " + e.getMessage());
+                        }
+                    }
+                });
+
                 order.calculateTotalAmount(); // 총 금액 계산
                 em.persist(order);
 
@@ -68,5 +85,9 @@ public class OrderTestDataCreator {
                 em.persist(delivery);
             }
         }
-    }*/
+
+        private boolean isItemInCart(Cart cart, Item item) {
+            return cart.getCartItems().stream().anyMatch(cartItem -> cartItem.getItem().equals(item));
+        }
+    }
 }
